add UI for firing mechanism

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script src="workfun.js"></script>
 </head>
 <body>
-
+  <!-- <script>
+    runGame(levelPlans, DOMDisplay);
+  </script> -->
 </body>
 </html>
