correct typos and start wiring up the interface

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<script src="workfun.js"></script>
 </head>
 <body>
-  <!-- <script>
-    runGame(levelPlans, DOMDisplay);
-  </script> -->
+	<button onclick=startTest(testAnimation)>FIRE!</button>
+	<!-- <script type="text/javascript">
+		addEventListener("click", function() {
+			console.log("Boom, Motherfucker!");
+		});
+	</script> -->
 </body>
 </html>
