--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<script src="workfun.js"></script>
 </head>
 <body>
-	<div>
+	<div id="game-div">
 		<script>
-	    runGame(levelPlans, DOMDisplay);
+			runGame(levelPlans, DOMDisplay);
 	  </script>
 	</div>
 	<div>
 		<form action="" method="get" id="launch-controls">
-			Launch Angle:<input type="text" name="launch-angle" value="45" id="launch-angle">
+			Launch Angle:<input type="text" placeholder="45" id="launch-angle">
 			<input type="submit">
 		</form>
 		<form id="test-form">
@@ -21,5 +21,6 @@
 			<input type="submit" id="submit-test">
 		</form>
 	</div>
+
 </body>
 </html>
