Fire button added; partially working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div>
 		<form action="" method="get" id="launch-controls">
 			Launch Angle:<input type="text" placeholder="45" id="launch-angle">
-			<input type="submit">
+			<button type="button" id="fire-button">Fire!</button>
 		</form>
 		<form id="test-form">
 			<input type="text" name="test-input" value="test" id="test-input">
