Add pause button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 	</div>
 	<div>
 		<form action="" method="get" id="launch-controls">
-			Launch Angle:<input type="text" placeholder="45" id="launch-angle">
-			<button type="button" id="fire-button">Fire!</button>
+			Launch Angle:<input type="text" placeholder="Enter launch angle, Sir." id="launch-angle">
+			<button type="button" id="fire-button">Fire!</button>		
 		</form>
+		<button type="button" id="pause-button">Pause</button>
+	</div>
+	<div class="messenger-hidden" id="message-board">
+		<p>			
+		</p>
 	</div>
 
 </body>
