Add message popup

--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
 	</div>
 	<div>
 		<form action="" method="get" id="launch-controls">
-			Launch Angle:<input type="text" placeholder="Enter launch angle, Sir." id="launch-angle">
+			Launch Angle:<input type="text" placeholder="Enter launch angle." id="launch-angle">
 			<button type="button" id="fire-button">Fire!</button>		
 		</form>
 		<button type="button" id="pause-button">Pause</button>
 	</div>
-	<div class="messenger-hidden" id="message-board">
-		<p>			
-		</p>
+	<div class="messenger" id="message-board">
 	</div>
 
 </body>
