Add wrap around behavior

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 	</div>
 	<div>
 		<form action="" method="get" id="launch-controls">
-			Launch Angle:<input type="text" placeholder="Enter launch angle." id="launch-angle">
+			Launch Angle:<input type="text" placeholder="Enter launch angle." 
+				id="launch-angle">
+			Launch Power:<input type="text" placeholder="Enter launch power." 
+				id="launch-power">
 			<button type="button" id="fire-button">Fire!</button>		
 		</form>
 		<button type="button" id="pause-button">Pause</button>
