Add status messages and improve handler

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			runGame(levelPlans, DOMDisplay);
 	  </script>
 	</div>
-	<div>
+	<div class="controls" id="control-div">
 		<form action="" method="get" id="launch-controls">
 			Launch Angle:<input type="text" placeholder="Enter launch angle." 
 				id="launch-angle">
