Add sound effects and projectile decay

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<button type="button" id="fire-button">Fire!</button>		
 		</form>
 		<button type="button" id="pause-button">Pause</button>
+		<p>Ammo: <span id="ammo-count">5</span>
 	</div>
 	<div class="messenger" id="message-board">
 	</div>
