Add sound effects

--- a/index.html
+++ b/index.html
@@ -2,28 +2,147 @@
 <html>
 <head>
 	<title>Recurse Application</title>
+  <!-- Bootstrap -->
+  <link href="assets/bootstrap.min.css" rel="stylesheet">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  <!-- User Stylesheet -->
 	<link rel="stylesheet" href="styles.css">
+	<!-- game script (must be loaded in <head>) -->
 	<script src="workfun.js"></script>
 </head>
 <body>
-	<div id="game-div">
-		<script>
-			runGame(levelPlans, DOMDisplay);
-	  </script>
+<div class="container-fluid">
+	<div class="row">
+		<div id="game-div" class="col-xs-12">
+			<script type="text/javascript">runGame(levelPlans, DOMDisplay);</script>
+		</div>
 	</div>
-	<div class="controls" id="control-div">
-		<form action="" method="get" id="launch-controls">
-			Launch Angle:<input type="text" placeholder="Enter launch angle." 
-				id="launch-angle">
-			Launch Power:<input type="text" placeholder="Enter launch power." 
-				id="launch-power">
-			<button type="button" id="fire-button">Fire!</button>		
-		</form>
-		<button type="button" id="pause-button">Pause</button>
-		<p>Ammo: <span id="ammo-count">5</span>
-	</div>
-	<div class="messenger" id="message-board">
-	</div>
+</div>
 
+<!-- "control-div" wraps the forms containing the game's controls. 
+This allows the game script to access and manipulate the control panel. -->
+<div id="control-div" class="container-fluid">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<form action="" method="post" id="launch-controls" class="form-inline">
+				<div class="form-group">
+					<label for="launch-angle" class="control-label">Launch Angle</label>
+					<div class="input-group">
+						<input type="text" id="launch-angle" class="form-control"
+						placeholder="Enter launch angle.">
+						<div class="input-group-addon">deg.</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="launch-power" class="control-label">Launch Power</label>
+					<div class="input-group">
+						<input type="text" id="launch-power" class="form-control"
+									placeholder="Enter launch power.">
+						<div class="input-group-addon">Newtons</div>
+					</div>	
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-4 col-sm-4" id="fire-group">
+						<button type="button" id="fire-button" 
+						class="btn btn-default btn-lg">Fire!</button> 
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<br />
+	<div class="row">
+		<div class="col-sm-7 col-sm-offset-1">
+			<form action="" method="post" id="game-info" class="form-inline">
+				<div class="form-group">
+					<p>Ammo: <span id="ammo-count" class="data">5</span></p>
+				</div>
+				<div class="form-group">
+					<p>Target Strength: <span id="ammo-count" class="data">3</span></p>
+				</div>
+				<div class="form-group">
+					<p>Launcher Strength: <span id="ammo-count" class="data">3</span></p>
+				</div>
+			</form>
+		</div>
+		<div class="col-sm-3" style="text-align: left;">
+			<button type="button" id="pause-button" class="btn btn-default btn-lg">
+			Pause</button>
+		</div>
+	</div>
+</div>
+
+
+<!-- <div id="control-div" class="container-fluid">
+	<form action="" method="get" id="launch-controls" class="form-horizontal">
+	<div class="row">
+		<fieldset class="col-sm-10 col-sm-offset-1">
+			<legend>Game Info</legend>
+			<div class="form-group">
+				<div class="col-xs-2">
+					<p>Ammo: <span id="ammo-count" class="data">5</span>
+				</div>
+				<div class="col-xs-3">
+					<p>Target Strength: <span id="ammo-count" class="data">3</span>
+				</div>
+				<div class="col-xs-3">
+					<p>Launcher Strength: <span id="ammo-count" class="data">3</span>
+				</div>
+			</div>
+		</fieldset>
+	</div>
+		<fieldset class="col-sm-5 col-sm-offset-1">
+			<legend>Launch Controls</legend>
+			<div class="row">
+				<div class="col-sm-8">
+					<div class="form-group">
+						<label for="launch-angle" class="col-sm-6 control-label">Launch Angle</label>
+						<div class="input-group col-sm-6">
+							<input type="text" id="launch-angle" class="form-control"
+							placeholder="Enter launch angle.">
+							<div class="input-group-addon">deg.</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="launch-power" class="col-sm-6 control-label">Launch Power</label>
+						<div class="input-group col-sm-6">
+							<input type="text" id="launch-power" class="form-control"
+							placeholder="Enter launch power.">
+							<div class="input-group-addon">Newtons</div>
+						</div>	
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="form-group">
+						<div class="col-sm-offset-4 col-sm-4" id="fire-group">
+							<button type="button" id="fire-button" 
+							class="btn btn-default btn-lg">Fire!</button> 
+						</div>
+					</div>
+				</div>
+			</div>
+		</fieldset>
+		<fieldset class="col-sm-5">
+			<legend>Game Controls</legend>
+			<button type="button" id="pause-button" class="btn btn-default btn-lg">
+			Pause</button>
+		</fieldset>
+	</div>
+	</form>
+</div> -->
+
+<div class="messenger" id="message-board">
+</div>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="assets/bootstrap.min.js"></script>
 </body>
 </html>
