Update status handler

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ This allows the game script to access and manipulate the control panel. -->
 					<p>Ammo: <span id="ammo-count" class="data">5</span></p>
 				</div>
 				<div class="form-group">
-					<p>Target Strength: <span id="ammo-count" class="data">3</span></p>
+					<p>Target Strength: <span id="target-health" class="data">2</span></p>
 				</div>
 				<div class="form-group">
-					<p>Launcher Strength: <span id="ammo-count" class="data">3</span></p>
+					<p>Launcher Strength: <span id="launcher-health" class="data">3</span></p>
 				</div>
 			</form>
 		</div>
