--- a/index.html
+++ b/index.html
@@ -25,6 +25,52 @@
 	</div>
 </div>
 
+<!-- Form input for final answers -->
+<form class="form-horizontal container hidden" id="answers">
+	<div class="row">
+		<div class="col-sm-12">
+			<h1>Write your answers to the three riddles here.</h1>
+		</div>
+	</div>
+	<div class="row hidden" id="try-again">
+		<div class="col-sm-12">
+			<h1>Sorry, Commander. We've made a mistake. Correct the red boxes below
+			to access the wisdom of the Ancients.
+			</h1>
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-3 riddle-answer">
+			<input type="text" class="form-control" id="riddle1">
+		</div>
+		<div>
+			<h2>devours all things . . .</h2>
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-3 riddle-answer">
+			<input type="text" class="form-control" id="riddle2">
+		</div>
+		<div>
+			<h2>is greater than God . . .</h2>
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-1">
+			<h2>The</h2>
+		</div>
+		<div class="col-sm-3 riddle-answer">
+			<input type="text" class="form-control" id="riddle3">
+		</div>
+		<div>
+			<h2>student killed the great sandworm.</h2>
+		</div>
+	</div>
+	<button type="button" id="riddle-submit" class="btn btn-default btn-lg">
+		Submit
+	</button>
+</form>
+
 <!-- "control-div" wraps the forms containing the game's controls. 
 This allows the game script to access and manipulate the control panel. -->
 <div id="control-div" class="container-fluid">
