Strip extra comments

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Recurse Application</title>
+	<title>DOMTASTIC</title>
   <!-- Bootstrap -->
   <link href="assets/bootstrap.min.css" rel="stylesheet">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
